# stringle

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  demo.py  pyproject.toml  validate.py
.github/workflows/: ci.yaml
src/stringle/: __init__.py  cli.py  replacer.py
tests/: __init__.py  test_replacer.py
