[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stringle"
version = "0.2.1"
description = "String wrangling for bulk find-and-replace operations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Zach Kurtz"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "attrs>=23.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stringle"]

[tool.pytest.ini_options]
testpaths = ["tests",]

[tool.pyright]
include = ["src", "tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  # ruff defaults:
  "E4", "E7", "E9", "F",
  # pycodestyle line formatting including line length
  "E5",
  # additional rule groups:
  "I", # flake8-import-order
  "TID", # flake8-tidy-imports
  "D", # google-style docstrings,
  "ANN", # require pyright type annotations
]
ignore = [
  "ANN002", # Missing type annotation for *args
  "ANN003", # Missing type annotation for **kwargs
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
  "D202", # would require one blank line after the last section of a multi-line docstring
  "D203", # would require one blank line at start of class docstring
  "D213", # would require multi-line docstring to start with a hard return
  "D401", # would require imperative mood in docstring
  "D413", # would put blank line at end of each multiline docstring
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"] # would require module-level documentation
"test_*.py" = [
  "D", # would put requirements on docstrings in test files
  "ANN201", # would require return type hint (normally None) for test functions
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]
